criado get e post da classe estoque
